--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "sass": "^1.83.4",
+    "swiper": "^11.2.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
